--- a/1-layout-UniC/index.html
+++ b/1-layout-UniC/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link href="resources/main.css" rel="stylesheet" type="text/css">
+    <!-- cand iti preiei template-urile de la un proiect la altul, sa fii atenta la aceste detalii, la interfata cu clientii conteaza mult -->
     <title>Into Sports</title>
   </head>
   <body>
@@ -16,6 +17,7 @@
       <header>
         <nav>
           <ul>
+            <!-- nu este necesar sa folosest si button si a, ambele sunt call-to-action si le putem stiliza pe ambele in functie de layout. de obicei se foloseste unul dintre cele 2 elemente -->
             <li><button><a href="#">Login</a></button></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Services</a></li>
@@ -28,6 +30,7 @@
         <h1>Landing page</h1>
         <h2>geometric background</h2>
         <div>
+          <!-- impartind manual textul ca sa ajungi la layout, reduce mult flexibilitatea. iti sugerez sa te folosesti de width in CSS ca sa ajungi la acest efect. Cum sunt impartite in layout nu este musai sa fie respactat la litera daca se compromite flexibilitatea -->
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
           <p>Sed do eiusmod tempor incididunt ut labore et </p>
           <p>dolore magna aliqua</p>
