--- a/1-layout-UniC/index.html
+++ b/1-layout-UniC/index.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link href="resources/main.css" rel="stylesheet" type="text/css">
-    <title>Into Sports</title>
+    <title>1-geometric</title>
   </head>
   <body>
     <main>
       <header>
         <nav>
           <ul>
-            <li><button><a href="#">Login</a></button></li>
+            <li><a href="#">Login</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact us</a></li>
@@ -28,9 +28,7 @@
         <h1>Landing page</h1>
         <h2>geometric background</h2>
         <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-          <p>Sed do eiusmod tempor incididunt ut labore et </p>
-          <p>dolore magna aliqua</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p> 
         </div>
         <button><a href="#">Try now</a></button>
       </section>
