Some changes of style after review

--- a/1-layout-UniC/index.html
+++ b/1-layout-UniC/index.html
@@ -30,7 +30,7 @@
         <div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p> 
         </div>
-        <button><a href="#">Try now</a></button>
+        <button>Try now</button>
       </section>
       <footer>
         <img src="../assignments/1-geometric/logo-white.png" alt="image-footer">
