Makeing the contact page

--- a/1-layout-UniC/index.html
+++ b/1-layout-UniC/index.html
@@ -19,7 +19,7 @@
             <li><a href="#">Login</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="contact.html">Contact us</a></li>
             <li><a href="#">Community</a></li>
           </ul>
         </nav>
