Make some changes after code review

--- a/1-layout-UniC/contact.html
+++ b/1-layout-UniC/contact.html
@@ -16,7 +16,7 @@
     <main class="contact-main">
       <header class="contact-header">
           <div>
-            <li><a href="index.html"><img src="../1-layout-UniC/assets/logo-white.png" class="img-logo"></a></li>
+            <li><a href="index.html"><img src="assets/logo-white.png" class="img-logo"></a></li>
             <nav>
                 <ul>
                     <li><a href="#">Login</a></li>
@@ -72,15 +72,15 @@
             </div>
             <div class="buttons">
                 <button class="btn-contact">Submit</button>
-                <p>or press <span>enter</span></p>
+                <div>or press <span>enter</span></div>
             </div>
           </form>
       </section>
       <footer class="contact-footer">
-        <h4>
+        <div>
           Geometric
-        </h4>
-        <p>technology</p>
+        </div>
+        <div>technology</div>
       </footer>
     </main>
   </body>
